@startuml
'https://plantuml.com/class-diagram

    class Schedule{
        + String id
        + Region region
        + Date startTime
    }

    abstract class AbstractScheduler{
        + List<Resource> resources
        + public abstract void runJobs()
    }

    class TimeScheduler extends AbstractScheduler{
        + List<Job> jobs
        + public void runJobs()
    }


    class BackGroundTask implements Runnable{
       + public void run()
    }

    class Job{
        + Resource resource
        + public boolean inTimeSlot();
    }


    BackGroundTask *-- AbstractScheduler
    TimeScheduler *-- Job
    Job *-- Schedule


@enduml






@enduml